--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "id": "https://sokerimunkki2035.github.io/isanpaiva/",
   "name": "Ääniystävä",
   "short_name": "Ääniystävä",
   "description": "Ääniystävä on lämmin kahvihetki, jossa eläinhahmot tuovat seuraa yksinäisyyteen.",
@@ -7,16 +8,19 @@
   "background_color": "#000000",
   "theme_color": "#000000",
   "orientation": "portrait-primary",
+  "categories": ["social", "lifestyle"],
   "icons": [
     {
       "src": "icon-192.png",
       "sizes": "192x192",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ]
 }
